--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,19 +2,30 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.aightevents">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/aightlogo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AiGHTEVENTS">
-        <activity android:name=".home_page"></activity>
+        <activity android:name=".admin_page"></activity>
+        <activity android:name=".organizer_page" />
+        <activity android:name=".participant_page" />
+        <activity android:name=".select_filter" />
+        <activity android:name=".event_details" />
+        <activity android:name=".new_organizer" />
+        <activity android:name=".new_event" />
+        <activity android:name=".home_page" />
         <activity android:name=".sign_in_org" />
         <activity android:name=".sign_in" />
         <activity android:name=".sign_up" />
         <activity android:name=".StartPage" />
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
