--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AiGHTEVENTS">
-        <activity android:name=".admin_page"></activity>
+        <activity android:name=".admin_page" />
         <activity android:name=".organizer_page" />
         <activity android:name=".participant_page" />
         <activity android:name=".select_filter" />
